# code-reviewer

./: .gitignore  2026-05-29-dynamic-workflows-run-state-phased-implementation-plan.md  Makefile  README.md  pyproject.toml
.agents/skills/find-eval-cases/: SKILL.md
.agents/skills/run-evals/: SKILL.md
.archon/workflows/: ai-code-review.yaml  simple-code-review.yaml
.github/workflows/: ai-code-review.yml  braintrust-evals.yml  ci.yml
docs/: github-app.md  integration.md
evals/: __init__.py  _review_comments.py  aggregate_dedupe_v0.py  capture_pr_case.py  code_review_v0.py  crumb_review_v0.py  discover_pr_review_cases.py  real_pr_review_v0.py  reviewer_correctness_regressions.py  simple_archon_review_v0.py  simple_archon_review_v1.py
evals/crumb_cases/reviewer_correctness_regressions/: clean-admin-audit-log.json  missing-auth-check.json
evals/examples/: hello_world.py  hello_world_bug.py  hello_world_typo.py
evals/real_pr_cases/: sahilsk11-friday-pr-35-commit-1.json  sahilsk11-friday-pr-35-commit-1.teacher.json
src/code_reviewer/: __init__.py  archon.py  cli.py  env.py  github_app_manifest.py  prompt_sync.py  run_store.py  workflow_builder.py
src/code_reviewer/commands/: __init__.py  cleanup_worktree.py  collect_github_context.py  common.py  discover_transcripts.py  finalize_review.py  prepare_worktree.py  publish_review.py  summarize_intent.py
src/code_reviewer/prompts/: aggregate_dedupe.md  find_implementation_transcript.md  publish_review.md  reviewer_correctness_regressions.md  reviewer_design_layering_reuse.md  reviewer_simplicity_alternatives.md  summarize_intent.md
src/code_reviewer/resources/: github-app-manifest.json
src/code_reviewer/workflows/: ai-code-review.yaml
tests/: test_archon.py  test_cli.py  test_commands.py  test_crumb_review_eval.py  test_env.py  test_eval_pr_case_tools.py  test_github_app_manifest.py  test_prompt_sync.py  test_reviewer_correctness_regressions_eval.py  test_run_store.py  test_workflow_builder.py
