[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "code-reviewer"
version = "0.1.0"
description = "Thin CLI wrapper for an Archon-powered PR reviewer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sahil Kapur" },
]
dependencies = [
  "braintrust",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.380",
  "pytest>=8.0",
  "ruff>=0.7.0",
]

[project.scripts]
code-review = "code_reviewer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"src/code_reviewer/prompts" = "code_reviewer/prompts"
"src/code_reviewer/resources" = "code_reviewer/resources"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "F",    # pyflakes: undefined names, unused imports, and invalid bindings
  "I",    # isort: import ordering
  "B",    # bugbear: likely bugs and footguns
  "C4",   # comprehensions: clearer list/dict/set construction
  "SIM",  # simplify: redundant branches and boolean expressions
  "UP",   # pyupgrade: keep syntax current for the supported Python version
  "PERF", # perflint: avoid avoidable hot-path overhead
  "RET",  # return: consistent return paths and unnecessary else blocks
]
extend-ignore = [
  "B008",
]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests", "evals"]
exclude = [
  "**/__pycache__",
  ".venv",
]
